// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header hides search bar on other pages 1`] = `
<header
  class="sticky top-0 z-40 bg-gray-50"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="h-16 flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex flex-col justify-center"
        >
          <a
            class="flex shrink-0 items-center text-xl font-bold text-brand-dark"
            href="/"
          >
            Booka.co.za
          </a>
        </div>
        <div
          class="hidden sm:ml-6 sm:flex sm:space-x-8"
        >
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-primary text-gray-900"
            href="/artists"
          >
            Artists
          </a>
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/services"
          >
            Services
          </a>
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/faq"
          >
            FAQ
          </a>
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/contact"
          >
            Contact
          </a>
        </div>
      </div>
      <div
        class="hidden sm:ml-6 sm:flex sm:items-center"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-gray-500 hover:text-gray-700 px-3 py-2 text-sm font-medium"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="bg-brand-dark text-white hover:bg-brand-dark px-3 py-2 rounded-md text-sm font-medium"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
      <div
        class="flex items-center sm:hidden"
      >
        <button
          class="-mr-2 ml-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-brand"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
          <svg
            aria-hidden="true"
            class="h-6 w-6"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders search bar on home page 1`] = `
<header
  class="sticky top-0 z-40 bg-gray-50"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="h-16 flex items-center justify-between"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex flex-col justify-center"
        >
          <a
            class="flex shrink-0 items-center text-xl font-bold text-brand-dark"
            href="/"
          >
            Booka.co.za
          </a>
          <span
            class="hidden sm:block -mt-0.5 text-[11px] sm:text-[12px] leading-4 text-gray-600"
          >
            Book legendary artists
          </span>
        </div>
        <div
          class="hidden sm:ml-6 sm:flex sm:space-x-8"
        >
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/artists"
          >
            Artists
          </a>
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/services"
          >
            Services
          </a>
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/faq"
          >
            FAQ
          </a>
          <a
            class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
            href="/contact"
          >
            Contact
          </a>
        </div>
      </div>
      <div
        class="hidden sm:ml-6 sm:flex sm:items-center"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-gray-500 hover:text-gray-700 px-3 py-2 text-sm font-medium"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="bg-brand-dark text-white hover:bg-brand-dark px-3 py-2 rounded-md text-sm font-medium"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
      <div
        class="flex items-center sm:hidden"
      >
        <button
          class="-mr-2 ml-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-brand"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
          <svg
            aria-hidden="true"
            class="h-6 w-6"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="pb-3 pt-2"
    >
      <form
        class="flex items-stretch bg-white rounded-full ring-1 ring-gray-200 shadow-sm overflow-hidden text-sm mx-auto w-full md:max-w-2xl"
      >
        <div
          class="flex-1 px-4 flex flex-col text-left py-2"
        >
          <span
            class="text-xs text-gray-500"
          >
            Category
          </span>
          <div
            class="relative w-full"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="mt-1 w-full flex justify-between items-center text-sm text-gray-700 focus:outline-none"
              data-headlessui-state=""
              id="headlessui-listbox-button-:r0:"
              type="button"
            >
              <span>
                Musician / Band
              </span>
              <svg
                aria-hidden="true"
                class="h-4 w-4 text-gray-400"
                data-slot="icon"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="border-l border-gray-200"
        />
        <div
          class="flex-1 px-4 flex flex-col text-left py-2"
        >
          <span
            class="text-xs text-gray-500"
          >
            Where
          </span>
          <input
            class="mt-1 w-full text-sm text-gray-700 placeholder-gray-400 focus:outline-none"
            placeholder="City or venue"
            type="text"
            value=""
          />
        </div>
        <div
          class="border-l border-gray-200"
        />
        <div
          class="flex-1 px-4 flex flex-col text-left py-2"
        >
          <span
            class="text-xs text-gray-500"
          >
            When
          </span>
          <div
            class="react-datepicker-wrapper"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                class="mt-1 w-full text-sm text-gray-700 focus:outline-none"
                placeholder="Add date & time"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          class="flex items-center justify-center w-12 h-12 md:w-11 md:h-11 bg-pink-600 hover:bg-pink-700 text-white"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="sr-only"
          >
            Search
          </span>
        </button>
      </form>
    </div>
  </div>
  <div
    class="border-t border-gray-200"
  />
</header>
`;
